# spark-project

ecommerce_analysis/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  check_processed_data.py  docker-compose.yml  pyproject.toml  requirements.txt  run_etl.py
ecommerce_analysis/config/: __init__.py  settings.py
ecommerce_analysis/docs/: GETTING_STARTED.md
ecommerce_analysis/notebooks/: exploratory_analysis.py
ecommerce_analysis/scripts/: generate_sample_data.py
ecommerce_analysis/src/: analysis.py  etl.py  utils.py
